feat: Add swagger for create and sign-in/up
