# server/gRPC/api/reaction/reactionClient.go
@@ -18,12 +18,6 @@ import (
 	"google.golang.org/grpc"
 )
 
-type AreaScenario struct {
-	UserId   int             `json:"user_id"`
-	Action   models.Action   `json:"action"`
-	Reaction models.Reaction `json:"reaction"`
-}
-
 type ReactionServiceClient struct {
 	gRPCService.ReactionServiceClient
 }
@@ -42,7 +36,7 @@ func (react *ReactionServiceClient) SendAction(body map[string]any, actionID int
 		return nil, err
 	}
 
-	var scenarioArea AreaScenario
+	var scenarioArea models.AreaScenario
 	err = json.Unmarshal(jsonString, &scenarioArea)
 	if err != nil {
 		return nil, err
